# abacusutils

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.rst  README.md  RELEASING.md  RELEASING.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml  python-publish.yml  tests.yml
AbacusHOD/: ._load_sims.py  abacus_hod.py  bla.py  calc_xi.py  design_subsample.py  load_sims.py  numba_hod_sample.py  numba_hod_test.py  run_hod.py  run_hod_numba.py  test_xi.py
AbacusHOD/GRAND_HOD/: ._gen_gal_catalog_rockstar_modified_subsampled.py  gen_gal_catalog_rockstar_modified_subsampled.py  gen_gal_catalog_rockstar_modified_subsampled_numba.py
AbacusHOD/config/: abacus_hod.yaml
AbacusHOD/tracers/: tracer_fun.py
abacusnbody/: common.py  util.py
abacusnbody/analysis/: cic.py  power_spectrum.py  shear.py  tpcf_corrfunc.py  tsc.py
abacusnbody/data/: __init__.py  _aurora_encodings.py  asdf.py  bitpacked.py  compaso_halo_catalog.py  healstruct.py  maplog.py  output_particle.py  pack9.py  pipe_asdf.py  read_abacus.py
abacusnbody/hod/: CSMF_HOD.py  GRAND_HOD.py  __init__.py  abacus_halo_catalog.py  abacus_hod.py  calc_xi.py  data_NM_halos.npz  design_subsample.py  load_sims.py  menv.py  nohup.out  optimize_hod.py  parallel_numpy_rng.py  power_spectrum.py  prepare_sim.py  run_emcee.py  run_hod.py  shear.py  tpcf_corrfunc.py  utils.py
abacusnbody/hod/AbacusHOD/: GRAND_HOD.py  abacus_hod.py  load_sims.py
abacusnbody/hod/GRAND_HOD/: gen_gal_catalog_rockstar_modified_subsampled_numba.py
abacusnbody/hod/config/: ._abacus_hod.yaml  abacus_hod.yaml
abacusnbody/hod/tracers/: tracer_fun.py
abacusnbody/hod/zcv/: advect_fields.py  get_xi_from_pk.py  ic_fields.py  linear_fields.py  tools_cv.py  tools_jdr.py  tracer_power.py  zcv_advect_fields.py  zcv_ic_fields.py  zcv_tools_jdr.py  zcv_zenbu_window.py  zenbu_window.py
abacusnbody/metadata/: __init__.py  abacusdesi2_headers_compressed.asdf  abacussummit.py  abacussummit_headers_compressed.asdf
abacusutils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
abacusutils/halos/: abacus_halo_catalog.py
blob/master/docs/: index.rst
data_subs/AbacusSummit_base_c000_ph001-abridged/z2.250/: halos_xcom_0_seed600_abacushod_oldfenv_MT_new.h5  particles_xcom_0_seed600_abacushod_oldfenv_MT_new.h5
data_subs/Mini_N64_L32/z0.000/: halos_xcom_0_seed600_abacushod_oldfenv_MT_new.h5  halos_xcom_0_seed600_abacushod_oldfenv_new.h5  halos_xcom_1_seed600_abacushod_oldfenv_MT_new.h5  halos_xcom_1_seed600_abacushod_oldfenv_new.h5  halos_xcom_2_seed600_abacushod_oldfenv_MT_new.h5  halos_xcom_2_seed600_abacushod_oldfenv_new.h5  particles_xcom_0_seed600_abacushod_oldfenv_MT_new.h5  particles_xcom_0_seed600_abacushod_oldfenv_new.h5  particles_xcom_1_seed600_abacushod_oldfenv_MT_new.h5  particles_xcom_1_seed600_abacushod_oldfenv_new.h5  particles_xcom_2_seed600_abacushod_oldfenv_MT_new.h5  particles_xcom_2_seed600_abacushod_oldfenv_new.h5
docs/: abacusnbody.analysis.rst  abacusnbody.data.rst  abacusnbody.hod.rst  abacusnbody.hod.zcv.rst  abacusnbody.metadata.rst  compaso.rst  conf.py  hod.rst  index.rst  installation.rst  make-apidoc.sh  metadata.rst  modules.rst  pipes.rst  requirements.txt  usage.rst
docs/_static/: custom.css
docs/tutorials/: analysis.rst  compaso.rst  light_cones.rst
docs/tutorials/analysis/: power_spectrum.ipynb  tsc.ipynb  zcv.ipynb
docs/tutorials/compaso/: halo_subsample_particles.ipynb  tracking_subsample_particles.ipynb
docs/tutorials/light_cones/: lc_cat.ipynb  lc_hod.ipynb  lc_pcles.ipynb  run_lc_hod.py  util.py
notebooks/tutorial_lc/: lc_cat.ipynb  lc_hod.ipynb  lc_pcles.ipynb  util.py
pipe_asdf/: Makefile  README.rst  client.c  halo_info_000.asdf  pipe_asdf.py
scripts/disBatch/kvsstcp/: Makefile  fauxSlurmRing.sh  kvsBatchWrapper.sh  kvsLoop.c  kvsRing.py  kvsSupport.c  kvsSupport.h  kvsTest.py  kvsTestWIc.c  kvsTestWIf.f  kvsTestf.f  kvsclient.py  kvscommon.py  kvsstcp.cabal  kvsstcp.py  setup.py  stack.yaml  wskvsmu.py  wskvspage.html
scripts/disBatch/kvsstcp/hs/: kvsclient.hs  kvsserver.hs
scripts/disBatch/kvsstcp/hs/Network/KVS/: Client.hs  Internal.hs  MQueue.hs  Server.hs  Types.hs
scripts/emulator/: README.md
scripts/hod/: ._run_emcee.py  likelihood.py  plot_chains.py  run_dynesty.py  run_emcee.py  run_hod.py  run_lc_hod.py  run_nested.py
scripts/metadata/: compress.py  gather_metadata.py
scripts/power/: bench.py  bench_binning.py  bench_fft.py  nbodykit_power.py
scripts/tsc/: bench.py  nbodykit_tsc.py
tests/: CSMF_test.ipynb  abacus_hod.yaml  abacus_lc_hod.yaml  common.py  generate_nbodykit_power.py  halos.txt  halos_xcom_2_seed600_abacushod_new.h5  particles.txt  particles_xcom_2_seed600_abacushod_new.h5  run_hod.py  test_data.py  test_halos_clean.asdf  test_halos_unclean.asdf  test_hod.py  test_lc_hod.py  test_meta.py  test_pipe_asdf.sh  test_power.py  test_subsamples_clean.asdf  test_subsamples_unclean.asdf  test_tsc.py  test_util.py
tests/config/: abacus_hod.yaml
tests/data_CSMF/: HOD_parameters.fits  config_CSMF.yaml
tests/data_power/: nbody_CIC.npz  nbody_CIC_compensated.npz  nbody_CIC_compensated_interlaced.npz  nbody_CIC_interlaced.npz  nbody_TSC.npz  nbody_TSC_compensated.npz  nbody_TSC_compensated_interlaced.npz  nbody_TSC_interlaced.npz
tests/ref/: halo_lc_cat.asdf  halo_lc_subsample.asdf  pipe.txt  test_halos_clean.asdf  test_pack9_pid.asdf
tests/ref_data/: halo_lc_cat.asdf  halo_lc_subsample.asdf  test_halos_clean.asdf  test_halos_unclean.asdf  test_pack9.asdf  test_read_asdf.asdf  test_subsamples_unclean.asdf  test_unpack_bits.asdf
tests/ref_tsc/: nbodykit_tsc_ngrid10.asdf  nbodykit_tsc_ngrid256.asdf  tsc_ngrid10.asdf  tsc_ngrid256.asdf
(+163 files in other folders)
