[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "abacusnbody/version.py"
write_to_template = '__version__ = "{version}"'

[tool.isort]
skip_glob = []
# line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pycln]
all = true
